public enum Category {

        ACTION,
        ADVENTURE,
        ANIMATION,
        BIOGRAPHY,
        COMEDY,
        CRIME,
        DOCUMENTARY,
        DRAMA,
        FAMILY,
        FANTASY,
        FILM_NOIR,
        HISTORY,
        HORROR,
        MUSIC,
        MUSICAL,
        MYSTERY,
        ROMANCE,
        SCI_FI,
        SPORT,
        TALK_SHOW,
        THRILLER,
        WAR,
        WESTERN,

}
